syntax = "proto3";

package pb;

option go_package = "github.com/tricong1998/go-ecom/cmd/payment/pb";

message Payment {
  uint64 id = 1;
  uint64 order_id = 2;
  uint64 user_id = 3;
  uint64 amount = 4;
  string method = 5;
  string status = 6;
  string error = 7;
  string created_at = 8;
  string updated_at = 9;
}